; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_proc.c_proc_findinternal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_proc.c_proc_findinternal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROC_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @proc_findinternal(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* @PROC_NULL, align 8
  store i64 %6, i64* %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = call i32 (...) @proc_list_lock()
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @pfind_locked(i32 %12)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @PROC_NULL, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %22, label %17

17:                                               ; preds = %11
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i64 @proc_ref_locked(i64 %19)
  %21 = icmp ne i64 %18, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %17, %11
  %23 = load i64, i64* @PROC_NULL, align 8
  store i64 %23, i64* %5, align 8
  br label %24

24:                                               ; preds = %22, %17
  %25 = load i32, i32* %4, align 4
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %24
  %28 = call i32 (...) @proc_list_unlock()
  br label %29

29:                                               ; preds = %27, %24
  %30 = load i64, i64* %5, align 8
  ret i64 %30
}

declare dso_local i32 @proc_list_lock(...) #1

declare dso_local i64 @pfind_locked(i32) #1

declare dso_local i64 @proc_ref_locked(i64) #1

declare dso_local i32 @proc_list_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
